=== Desk Mess Mirrored ===
Changelog: October 13, 2014
== Version 2.2.5 ==
= Code =

= CSS =

= Miscellaneous =
* Code reformatting to better meet current WordPress Coding Standards

/** ------------------------------------------------------------------------- */
== Version 2.2.4/2.2.4.1 ==
= Code =
* Added `dmm_post_meta_link_edit()` function with filter hooks for DRY purposes
* Removed call to `function_exists( 'dynamic_sidebar' )` as required WordPress version precludes its necessity

= CSS =
* Added better list element styles
* Fixed typo on `.wp-caption img` max-width property
* Fixed `.wp-caption` left and right alignment issues
* Minor clean-up of old properties

= Miscellaneous =
* Added `Textdomain` to theme header block
* Changed `fixed-width` theme tag to `fixed-layout`
* Code reformatted to better meet the WordPress Coding Standards
* Clean-up `readme.txt` file
* Replaced screenshot with new 880 x 660 version (removed secondary screenshots)
* Updated Copyright Years

/** ------------------------------------------------------------------------- */
== Version 2.2.3 ==
= Code =
* Added support for Post-Format: Link
* Added DMM_SHOW_PAGE_PERMALINK constant
* Made "Page Permalink" link conditionally display with default as false
* Removed unused $sep_location parameter

= CSS =
* Added appropriate styling for post-format: link related items
* Removed really old browser CSS support ... going with support for current only

= Miscellaneous =
* Added Serbo-Croatian translation by Andrijana Nikolic from webhostinggeeks.com

/** ------------------------------------------------------------------------- */
== Version 2.2.2 ==
= Code =
* Fix comments closed message displaying when comments are open

/** ------------------------------------------------------------------------- */
== Version 2.2.1 ==
= Code =
* Expanded use of DMM_HOME_DOMAIN constant
* Change featured image to display full and centered across posts